# server/src/modules/alert/alert.routes.ts
@@ -1,9 +1,10 @@
 import { Router } from 'express';
-import { createAlertController, getActiveAlertsController } from './alert.controller.js';
+import { createAlertController, getActiveAlertsController, testAlertController } from './alert.controller.js';
 
 const router = Router();
 router.post('/create', createAlertController);
 
 router.get('/active', getActiveAlertsController);
+router.post('/test', testAlertController);
 
 export default router;
